--- a/app/design/frontend/Syscon/fournierbois_priv/Magento_Sales/templates/email/items/order/default.phtml
+++ b/app/design/frontend/Syscon/fournierbois_priv/Magento_Sales/templates/email/items/order/default.phtml
@@ -15,14 +15,15 @@ $_order = $_item->getOrder();
 <tr>
     <td class="item-info<?php if ($block->getItemOptions()): ?> has-extra<?php endif; ?>">
         <p class="product-name"><?= $block->escapeHtml($_item->getName()) ?></p>
-        <p class="sku"><?= /* @escapeNotVerified */  __('SKU'); ?>: <?= $block->escapeHtml($block->getSku($_item)) ?></p>
         <?php if ($block->getItemOptions()): ?>
             <dl class="item-options">
             <?php foreach ($block->getItemOptions() as $option): ?>
+            <?php if (fnmatch('Longueur*', $option['label']) or fnmatch("*paisseur*", $option['label']) or fnmatch('Largeur*', $option['label']) or fnmatch('Quantité [*', $option['label'])): ?>
                 <dt><strong><em><?= /* @escapeNotVerified */  $option['label'] ?></em></strong></dt>
                 <dd>
                     <?= /* @escapeNotVerified */  nl2br($option['value']) ?>
                 </dd>
+            <?php endif; ?>
             <?php endforeach; ?>
             </dl>
         <?php endif; ?>
