--- a/app/design/frontend/Syscon/fournierbois_priv/Magento_Sales/templates/order/items/renderer/default.phtml
+++ b/app/design/frontend/Syscon/fournierbois_priv/Magento_Sales/templates/order/items/renderer/default.phtml
@@ -18,7 +18,7 @@ $_item = $block->getItem();
             <dt><?php echo $block->escapeHtml($_option['label']) ?></dt>
             <?php if (!$block->getPrintStatus()): ?>
                 <?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
-                <?php if (strpos($_option['label'], 'ongueu') or strpos($_option['label'], 'paisseu') or strpos($_option['label'], 'argeu') or strpos($_option['label'], 'uantité [')): ?>
+                <?php if (fnmatch("Longueur*", $_option['label']) or fnmatch("Épaisseur*", $_option['label']) or fnmatch("Largeur*", $_option['label']) or fnmatch("Quantité [*", $_option['label'])): ?>
                 <dd>
                     <?php if (isset($_formatedOptionValue['full_view'])): ?>
                         <?php /* @escapeNotVerified */ echo $_formatedOptionValue['full_view'] ?>
@@ -26,6 +26,7 @@ $_item = $block->getItem();
                         <?php /* @escapeNotVerified */ echo $_formatedOptionValue['value'] ?>
                     <?php endif; ?>
                 </dd>
+                <?php endif; ?>
             <?php else: ?>
                 <dd>
                     <?php echo nl2br($block->escapeHtml((isset($_option['print_value']) ? $_option['print_value'] : $_option['value']))) ?>
