--- a/app/design/frontend/Syscon/fournierbois_priv/Magento_Sales/templates/email/items/order/default.phtml
+++ b/app/design/frontend/Syscon/fournierbois_priv/Magento_Sales/templates/email/items/order/default.phtml
@@ -19,10 +19,7 @@ $_order = $_item->getOrder();
             <dl class="item-options">
             <?php foreach ($block->getItemOptions() as $option): ?>
             <?php if (fnmatch('Longueur*', $option['label']) or fnmatch("*paisseur*", $option['label']) or fnmatch('Largeur*', $option['label']) or fnmatch('Quantité [*', $option['label'])): ?>
-                <dt><strong><em><?= /* @escapeNotVerified */  $option['label'] ?></em></strong></dt>
-                <dd>
-                    <?= /* @escapeNotVerified */  nl2br($option['value']) ?>
-                </dd>
+                <p><small><?= /* @escapeNotVerified */  $option['label'] ?>: <?= /* @escapeNotVerified */  nl2br($option['value']) ?></small></p>
             <?php endif; ?>
             <?php endforeach; ?>
             </dl>
