--- a/app/design/frontend/Syscon/fournierbois_priv/Magento_Multishipping/templates/multishipping/item/default.phtml
+++ b/app/design/frontend/Syscon/fournierbois_priv/Magento_Multishipping/templates/multishipping/item/default.phtml
@@ -13,6 +13,7 @@
         <dl class="item options">
             <?php foreach ($_options as $_option) : ?>
                 <?php $_formatedOptionValue = $block->getFormatedOptionValue($_option) ?>
+                <?php if (fnmatch('Longueur*', $_option['label']) or fnmatch("*paisseur*", $_option['label']) or fnmatch('Largeur*', $_option['label']) or fnmatch('Quantité [*', $_option['label'])): ?>
                 <dt><?php echo $block->escapeHtml($_option['label']) ?></dt>
                 <dd<?php if (isset($_formatedOptionValue['full_view'])): ?> class="tooltip wrapper"<?php endif; ?>>
                     <?php /* @escapeNotVerified */ echo $_formatedOptionValue['value'] ?>
@@ -23,6 +24,7 @@
                         </dl>
                     <?php endif; ?>
                 </dd>
+                <?php endif; ?>
             <?php endforeach; ?>
         </dl>
     <?php endif; ?>
